[tool.poetry]
name = "recap"
version = "0.1.7"
description = "Reproducible configurations for any project"
authors = ["Georg Wölflein <georgw7777@gmail.com>"]
license = "Apache-2.0"
packages = [
    { include = "recap" }
]
readme = "README.md"
homepage = "http://recap.readthedocs.io"
repository = "https://github.com/georg-wolflein/recap"
keywords = ["flake8", "markdown", "lint"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
yacs = "^0.1.8"
wrapt = "^1.12.1"
pyyaml = "^6.0.1"
sphinx = { version = "^3.4.1", optional = true }
sphinx-rtd-theme = { version = "^0.5.0", optional = true }
m2r2 = { version = "^0.2.7", optional = true }

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pytest = "^6.1.2"
pylint = "^2.6.0"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "m2r2"]

[tool.poetry-version-plugin]
source = "init"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
